# AIS-Standard

./: # birth.py  LICENSE.md  README.md  birth.py  history  pyproject.toml
canon/: AIS-v1.0.rtf
src/ais_baby/: cli.py  consent_crypt.py  eternal_seal.py  paradox_ledger.py  pie_poem.py  principles.py
src/ais_baby.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
